[package]
name = "chrome-native-macros"
version = "1.0.0"
edition = "2021"
description = "macros for chrome-native"
license = "GPL-3.0"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["derive"] }
