[package]
name = "chrome-native"
version = "1.0.0"
edition = "2021"
description = "api for chrome-native"
license = "GPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", optional = true }
serde_json = { version = "1.0.83", optional = true }
chrome-native-macros = { path = "../chrome-native-macros", version="1.0.0", optional = true }
thiserror = "1.0.32"

[features]
default = [
    "serde"
]

macros = [
    "dep:chrome-native-macros"
]

serde = [
    "dep:serde",
    "dep:serde_json"
]
